envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: envoy
              domains: ["*"]
              response_headers_to_add:
                header: 
                  key: x-forwarded-host
                  value: "%REQ(:AUTHORITY)%"
                append: true
                append_action: APPEND_IF_EXISTS_OR_ADD
                keep_empty_value: true
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: "x-irn"
                    safe_regex_match:
                      regex: "envoy"
                  - name: "x-cell-hostname"
                    treat_missing_header_as_empty: true
                    safe_regex_match:
                      regex: "(www.envoyproxy.io)?"
                  - name: "x-version"
                    treat_missing_header_as_empty: true
                    safe_regex_match:
                      regex: "(v0.0.1)?"
                route:
                  append_x_forwarded_host: true
                  auto_host_rewrite: true
                  cluster: service_envoyproxy_io
              - match:
                  prefix: "/"
                  headers:
                  - name: "x-irn"
                    safe_regex_match:
                      regex: "envoy"
                  - name: "x-cell-hostname"
                    treat_missing_header_as_empty: true
                    safe_regex_match:
                      regex: "(www.envoyproxy.io)?"
                  - name: "x-version"
                    treat_missing_header_as_empty: true
                    safe_regex_match:
                      regex: "v0.0.2"
                route:
                  append_x_forwarded_host: true
                  auto_host_rewrite: true
                  cluster: service_google_com
              - match:
                  prefix: "/"
                  headers:
                  - name: "x-irn"
                    safe_regex_match:
                      regex: "envoy"
                  - name: "x-cell-hostname"
                    treat_missing_header_as_empty: true
                    safe_regex_match:
                      regex: "(www.google.com)?"
                  - name: "x-version"
                    treat_missing_header_as_empty: true
                    safe_regex_match:
                      regex: "(v0.0.1)?"
                route:
                  append_x_forwarded_host: true
                  auto_host_rewrite: true
                  cluster: service_google_com

  clusters:
  - name: service_envoyproxy_io
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.envoyproxy.io
                port_value: 443
            hostname: www.envoyproxy.io
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.envoyproxy.io
  - name: service_google_com
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_google_com
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.google.com
                port_value: 443
            hostname: www.google.com
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.google.com
